[package]
name = "rustcomp"
version = "0.3.1"
edition = "2021"
license = "MIT"
authors = ["Hunter Davenport"]
categories = ["rust-patterns"]
description = "Adds vector, map, set, and iterator comprehensions to Rust."
documentation = "https://docs.rs/rustcomp"
keywords = ["vector", "comprehension", "macro", "python"]
readme = "README.md"
repository = "https://github.com/dablenparty/rustcomp"

[dependencies]
